Fix small product image on mobile

--- a/src/components/Cards/ImageProductCard/ImageProductCard.css
+++ b/src/components/Cards/ImageProductCard/ImageProductCard.css
@@ -45,6 +45,13 @@
   }
 }
 
+@media (max-width: 480px) {
+  .image-product-card {
+    width: 50vw;
+  }
+}
+
+
 
 @keyframes moveToLeft {
   0% {
